Bug 387109, context menu not placed properly for lists when opened with the keyboard, r=smaug,sr=neil,a=dbaron